--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -4227,19 +4227,6 @@
   timestamp = {2019.04.13},
 }
 
-@Article{Breiman2001a,
-  author    = {Breiman, L.},
-  title     = {Random Forests},
-  journal   = {Machine Learning},
-  year      = {2001},
-  volume    = {45},
-  number    = {1},
-  pages     = {5-32},
-  doi       = {10.1023/a:1010933404324},
-  owner     = {Vincent},
-  timestamp = {2020.03.13},
-}
-
 @Book{Brendel2011,
   title     = {Understanding Quotation},
   publisher = {De Gruyter},
@@ -5021,6 +5008,19 @@
   doi       = {10.1145/2702123.2702446},
   owner     = {Vincent},
   timestamp = {2020.08.11},
+}
+
+@Article{Cao2015a,
+  author    = {Cao, X. and Zhang, C. and Zhou, C. and Fu, H. and Foroosh, H.},
+  title     = {Constrained Multi-View Video Face Clustering},
+  journal   = {IEEE Transactions on Image Processing},
+  year      = {2015},
+  volume    = {24},
+  number    = {11},
+  pages     = {4381-4393},
+  doi       = {10.1109/tip.2015.2463223},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
 }
 
 @InProceedings{Cao2018,
@@ -8075,6 +8075,20 @@
   owner     = {Vincent},
   timestamp = {2020.01.02},
   url       = {https://muse.jhu.edu/article/552219},
+}
+
+@InProceedings{Du2012,
+  author    = {Du, M. and Chellappa, R.},
+  title     = {Face Association across Unconstrained Video Frames Using Conditional Random Fields},
+  booktitle = {12th European conference on Computer Vision},
+  year      = {2012},
+  volume    = {7578},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {167-180},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-642-33786-4_13},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
 }
 
 @InProceedings{Du2019a,
@@ -14192,6 +14206,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.23},
 }
 
+@InProceedings{John2016,
+  author        = {John, M. and Lohmann, S. and Koch, S. and Wörner, M. and Ertl, T.},
+  title         = {Visual Analytics for Narrative Text - Visualizing Characters and their Relationships as Extracted from Novels},
+  booktitle     = {11th Joint Conference on Computer Vision, Imaging and Computer Graphics Theory and Applications},
+  year          = {2016},
+  pages         = {27-38},
+  __markedentry = {[Vincent:]},
+  doi           = {10.5220/0005669800270038},
+  owner         = {Vincent},
+  timestamp     = {2020.08.12},
+}
+
 @InProceedings{John2017,
   author    = {John, M. and Lohmann, S. and Koch, S. and Wörner, M. and Ertl, T.},
   title     = {Visual Analysis of Character and Plot Information Extracted from Narrative Text},
@@ -15089,22 +15115,12 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Kim2011,
   author    = {Kim, K. and Ko, S. and Elmqvist, N. and Ebert, D. S.},
   title     = {Word-Bridge: Using Composite Tag Clouds in Node-Link Diagrams for Visualizing Content and Relations in Text Corpora},
-  booktitle = {Hawaii International Conference on System Sciences},
-  year      = {2011},
-  pages     = {1-8},
-  doi       = {10.4490/algae.2011.26.1.001},
-  owner     = {Vincent},
-  timestamp = {2019.03.23},
-}
-
-@InProceedings{Kim2011a,
-  author    = {Kim, K. and Ko, S. and Elmqvist, N. and Ebert, D. S.},
-  title     = {WordBridge: Using Composite Tag Clouds in Node-Link Diagrams for Visualizing Content and Relations in Text Corpora},
   booktitle = {44th Hawaii International Conference on System Sciences},
   year      = {2011},
+  pages     = {1-8},
   doi       = {10.1109/hicss.2011.499},
   owner     = {Vincent},
-  timestamp = {2020.08.11},
+  timestamp = {2019.03.23},
 }
 
 @Article{Kim2014,
@@ -15187,6 +15203,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.23},
   url       = {https://www.aclweb.org/anthology/N19-1067.pdf},
+}
+
+@Article{King2009,
+  author    = {King, D. E.},
+  title     = {Dlib-ml: A Machine Learning Toolkit},
+  journal   = {Journal of Machine Learning Research},
+  year      = {2009},
+  volume    = {10},
+  number    = {60},
+  pages     = {1755-1758},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
+  url       = {https://www.jmlr.org/papers/v10/king09a.html},
 }
 
 @InProceedings{Kingma2015,
@@ -15950,6 +15979,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.24},
 }
 
+@InProceedings{Kulshreshtha2018,
+  author    = {Kulshreshtha, P. and Guha, T.},
+  title     = {An Online Algorithm for Constrained Face Clustering in Videos},
+  booktitle = {25th IEEE International Conference on Image Processing},
+  year      = {2018},
+  pages     = {2670-2674},
+  doi       = {10.1109/icip.2018.8451343},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
+}
+
 @Article{Kulshreshtha2020,
   author    = {Kulshreshtha, P. and Guha, T.},
   title     = {Dynamic Character Graph via Online Face Clustering for Movie Analysis},
@@ -16538,6 +16578,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@InProceedings{Le2012,
+  author    = {Le, Q. V. and Ranzato, M. A. Monga, R. and Devin, M. and Chen, K. and Corrado, G. S. and Dean, J. and Ng, A.},
+  title     = {Building high-level features using large scale unsupervised learning},
+  booktitle = {29th International Coference on International Conference on Machine Learning},
+  year      = {2012},
+  pages     = {507-514},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
+  url       = {https://dl.acm.org/doi/10.5555/3042573.3042641},
+}
+
 @InProceedings{Le2014,
   author    = {Le, Q. V. and Mikolov, T.},
   title     = {Distributed Representations of Sentences and Documents},
@@ -16891,7 +16942,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Lee2018b,
   author    = {Lee, O-J. and Jung, J. J.},
   title     = {Explainable Movie Recommendation Systems by using Story-based Similarity},
-  booktitle = {ACM IUI Workshops / 23rd ACM Conference on Intelligent User Interfaces},
+  booktitle = {ACM IUI Workshop on Explainable Smart Systems},
   year      = {2018},
   volume    = {2068},
   series    = {CEUR Workshop Proceedings},
@@ -16912,17 +16963,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1371/journal.pone.0204430},
   owner     = {Vincent},
   timestamp = {2020.01.02},
-}
-
-@InProceedings{Lee2018f,
-  author    = {Lee, O-J. and Jung, J. J.},
-  title     = {Explainable Movie Recommendation Systems by using Story-based Similarity},
-  booktitle = {ACM IUI Workshop on Explainable Smart Systems},
-  year      = {2018},
-  series    = {CEUR Workshop Proceedings},
-  owner     = {Vincent},
-  timestamp = {2020.07.26},
-  url       = {http://ceur-ws.org/Vol-2068/exss5.pdf},
 }
 
 @InProceedings{Lee2019b,
@@ -19120,21 +19160,8 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
-@Article{Markovi2018,
-  author    = {Markovič, R. and Gosak, M. and Perc, M. and Marhl, M. and Grubelnik, V.},
-  title     = {Applying network theory to fables: complexity in Slovene belles-lettres for different age groups},
-  journal   = {Journal of Complex Networks},
-  year      = {2018},
-  volume    = {7},
-  number    = {1},
-  pages     = {114-127},
-  doi       = {10.1093/comnet/cny018},
-  owner     = {Vincent},
-  timestamp = {2020.01.05},
-}
-
 @Article{Markovic2018,
-  author    = {Markovic, R. and Gosak, M. and Perc, M. and Marhl, M. and Grubelnik, V.},
+  author    = {Markovič, R. and Gosak, M. and Perc, M. and Marhl, M. and Grubelnik, V.},
   title     = {Applying network theory to fables: complexity in Slovene belles-lettres for different age groups},
   journal   = {Journal of Complex Networks},
   year      = {2018},
@@ -20317,6 +20344,31 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url         = {https://pdfs.semanticscholar.org/e782/00b1e3ba2a72de1ca9b9b2c5efa775151bfa.pdf},
 }
 
+@Article{Mitra2014,
+  author    = {Mitra, A. and Biswas, S. and Bhattacharyya, C.},
+  title     = {Temporally Coherent Bayesian Models for Entity Discovery in Videos by Tracklet Clustering},
+  journal   = {arXiv},
+  year      = {2014},
+  volume    = {cs.CV},
+  pages     = {1409.6080},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
+  url       = {https://arxiv.org/abs/1409.6080},
+}
+
+@Article{Mitra2017,
+  author    = {Mitra, A. and Biswas, S. and Bhattacharyya, C.},
+  title     = {Bayesian Modeling of Temporal Coherence in Videos for Entity Discovery and Summarization},
+  journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year      = {2017},
+  volume    = {39},
+  number    = {3},
+  pages     = {430-443},
+  doi       = {10.1109/tpami.2016.2557785},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
+}
+
 @Article{Mittell2006,
   author    = {Mittell, J.},
   title     = {Narrative Complexity in Contemporary American Television},
@@ -20547,16 +20599,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://psycnet.apa.org/record/2005-00641-000},
-}
-
-@Book{Moreno1934a,
-  title     = {Who Shall Survive? A New Approach to the Problem of Human Interrelations},
-  publisher = {Beacon House},
-  year      = {1934},
-  author    = {Moreno, J. L.},
-  owner     = {Vincent},
-  timestamp = {2020.07.21},
-  url       = {https://archive.org/details/whoshallsurviven00jlmo},
 }
 
 @Book{Moretti1987,
@@ -24140,6 +24182,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@InProceedings{Ramakrishna2017,
+  author    = {Ramakrishna, A. and Martínez, V. R. and Malandrakis, N. and Singla, K. and Narayanan, S.},
+  title     = {Linguistic analysis of differences in portrayal of movie characters},
+  booktitle = {55th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2017},
+  pages     = {1669-1678},
+  doi       = {10.18653/v1/p17-1153},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
+}
+
 @InProceedings{Ramanan2007,
   author    = {Ramanan, D. and Baker, S. and Kakade, S.},
   title     = {Leveraging archival video for building face datasets},
@@ -26308,6 +26361,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2018.11.11},
 }
 
+@InProceedings{Schroff2015,
+  author    = {Schroff, F. and Kalenichenko, D. and Philbin, J.},
+  title     = {FaceNet: A unified embedding for face recognition and clustering},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition},
+  year      = {2015},
+  pages     = {815-823},
+  doi       = {10.1109/cvpr.2015.7298682},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
+}
+
 @Book{Schubart2007,
   title     = {Super Bitches and Action Babes: The Female Hero in Popular Cinema, 1970-2006},
   publisher = {McFarland \& Co.},
@@ -26673,6 +26737,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.24},
   url       = {https://trove.nla.gov.au/work/25836193?q&versionId=31135080},
+}
+
+@Article{Sharma2017,
+  author    = {Sharma, V. and Sarfraz, M. S. and Stiefelhagen, R.},
+  title     = {A simple and effective technique for face clustering in TV series},
+  journal   = {OpenReview.net},
+  year      = {2017},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
+  url       = {https://openreview.net/forum?id=rJo-zOvgW&noteId=rJo-zOvgW},
 }
 
 @Article{Shaw1954,
@@ -28076,6 +28150,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/CVPR.2014.244},
   owner     = {Vincent},
   timestamp = {2019.07.03},
+}
+
+@InProceedings{Sun2014a,
+  author    = {Sun, Y. and Chen, Y. and Wang, X. and Tang, X.},
+  title     = {Deep learning face representation by joint identification-verification},
+  booktitle = {27th International Conference on Neural Information Processing Systems},
+  year      = {2014},
+  pages     = {1988-1996},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
+  url       = {https://dl.acm.org/doi/10.5555/2969033.2969049},
 }
 
 @Article{Sun2017,
@@ -30937,6 +31022,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.08.19},
 }
 
+@InProceedings{Wolf2011,
+  author    = {Wolf, L. and Hassner, T. and Maoz, I.},
+  title     = {Face recognition in unconstrained videos with matched background similarity},
+  booktitle = {Conference on Computer Vision and Pattern Recognition},
+  year      = {2011},
+  pages     = {529-534},
+  doi       = {10.1109/cvpr.2011.5995566},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
+}
+
 @Book{Woloch2003,
   title     = {The One vs. the Many: Minor Characters and the Space of the Protagonist in the Novel},
   publisher = {Princeton University Press},
@@ -31073,6 +31169,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.17},
 }
 
+@InProceedings{Wu2013,
+  author    = {Wu, B. and Lyu, S. and Hu, B.-G. and Ji, Q.},
+  title     = {Simultaneous Clustering and Tracklet Linking for Multi-face Tracking in Videos},
+  booktitle = {IEEE International Conference on Computer Vision},
+  year      = {2013},
+  pages     = {2856-2863},
+  doi       = {10.1109/iccv.2013.355},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
+}
+
+@InProceedings{Wu2013a,
+  author    = {Wu, B. and Zhang, Y. and Hu, B.-G. and Ji, Q.},
+  title     = {Constrained Clustering and Its Application to Face Clustering in Videos},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition},
+  year      = {2013},
+  pages     = {3507-3514},
+  doi       = {10.1109/cvpr.2013.450},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
+}
+
 @InProceedings{Wu2014l,
   author    = {Wu, Z. and Aizawa, K.},
   title     = {MangaWall: Generating manga pages for real-time applications},
@@ -31093,6 +31211,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {https://pudding.cool/2017/03/hamilton/index.html},
   owner        = {Vincent},
   timestamp    = {2017.05.06},
+}
+
+@Article{Wu2017,
+  author    = {Wu, B. and Hu, B.-G. and Ji, Q.},
+  title     = {A Coupled Hidden Markov Random Field model for simultaneous face clustering and tracking in videos},
+  journal   = {Pattern Recognition},
+  year      = {2017},
+  volume    = {64},
+  pages     = {361-373},
+  doi       = {10.1016/j.patcog.2016.10.022},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
 }
 
 @InProceedings{Xanthos2014,
@@ -31149,6 +31279,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/ICME.2010.5582982},
   owner     = {Vincent},
   timestamp = {2019.06.28},
+}
+
+@InProceedings{Xiao2014,
+  author    = {Xiao, S. and Tan, M. and Xu, D.},
+  title     = {Weighted Block-Sparse Low Rank Representation for Face Clustering in Videos},
+  booktitle = {European Conference on Computer Vision},
+  year      = {2014},
+  volume    = {8694},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {123-138},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-319-10599-4_9},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
 }
 
 @Article{Xiao2018,
@@ -32085,6 +32229,34 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tip.2016.2601491},
   owner     = {Vincent},
   timestamp = {2019.12.31},
+}
+
+@InProceedings{Zhang2016a,
+  author    = {Zhang, S. and Gong, Y. and Wang, J.},
+  title     = {Deep Metric Learning with Improved Triplet Loss for Face Clustering in Videos},
+  booktitle = {Pacific Rim Conference on Multimedia},
+  year      = {2016},
+  volume    = {9916},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {497-508},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-319-48890-5_49},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
+}
+
+@InProceedings{Zhang2016b,
+  author    = {Zhang, Z. and Luo, P. and Loy, C. C. and Tang, X.},
+  title     = {Joint Face Representation Adaptation and Clustering in Videos},
+  booktitle = {European Conference on Computer Vision},
+  year      = {2016},
+  volume    = {9907},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {236-251},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-319-46487-9_15},
+  owner     = {Vincent},
+  timestamp = {2020.08.12},
 }
 
 @InProceedings{Zhang2019aa,
