--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2904,6 +2904,19 @@
   timestamp = {2019.04.09},
 }
 
+@Article{Bholowalia2014,
+  author    = {Bholowalia, P. and Kumar, A.},
+  title     = {EBK-Means: A Clustering Technique based on Elbow Method and K-Means in WSN},
+  journal   = {International Journal of Computer Applications},
+  year      = {2014},
+  volume    = {105},
+  number    = {9},
+  pages     = {17-24},
+  doi       = {10.5120/18405-9674},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @Article{Bianconi2008,
   author    = {Bianconi, G.},
   title     = {The entropy of randomized network ensembles},
@@ -3376,6 +3389,18 @@
   doi       = {10.1109/iccv.2013.283},
   owner     = {Vincent},
   timestamp = {2020.01.03},
+}
+
+@Article{Bojanowski2017,
+  author    = {Bojanowski, P. and Grave, E. and Joulin, A. and Mikolov, T.},
+  title     = {Enriching Word Vectors with Subword Information},
+  journal   = {Transactions of the Association for Computational Linguistics},
+  year      = {2017},
+  volume    = {5},
+  pages     = {135-146},
+  doi       = {10.1162/tacl_a_00051},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
 }
 
 @Article{Bokhorst2010,
@@ -7334,6 +7359,17 @@
   timestamp = {2019.04.27},
 }
 
+@InProceedings{DelCorro2013,
+  author    = {Del Corro, L. and Gemulla, R.},
+  title     = {ClausIE: clause-based open information extraction},
+  booktitle = {22nd international conference on World Wide Web},
+  year      = {2013},
+  pages     = {355-366},
+  doi       = {10.1145/2488388.2488420},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @InProceedings{Deleris2018,
   author    = {Deleris, L. A. and Bonin, F. and Daly, E. and Deparis, S. and Hou, Y. and Jochim, C. and Lassoued, Y. and Levacher, K.},
   title     = {Know Who Your Friends Are: Understanding Social Connections from Unstructured Text},
@@ -10816,6 +10852,19 @@
   timestamp = {2019.04.13},
 }
 
+@Article{Gildea2002,
+  author    = {Gildea, D. and Jurafsky, D.},
+  title     = {Automatic Labeling of Semantic Roles},
+  journal   = {Computational Linguistics},
+  year      = {2002},
+  volume    = {28},
+  number    = {3},
+  pages     = {245-288},
+  doi       = {10.1162/089120102760275983},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @Article{Giles2008,
   author    = {Giles, C. B. and Wren, J. D},
   title     = {Large-scale directional relationship extraction and resolution},
@@ -11586,6 +11635,17 @@
   owner     = {Vincent},
   timestamp = {2020.07.24},
   url       = {https://www.jstor.org/stable/24461922},
+}
+
+@InCollection{Greimas1973,
+  author    = {Greimas, A. J.},
+  title     = {Les actants, les acteurs et les figures},
+  booktitle = {Sémiotique narrative et textuelle},
+  publisher = {Larousse},
+  year      = {1973},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+  url       = {https://gallica.bnf.fr/ark:/12148/bpt6k3398326j.texteImage},
 }
 
 @TechReport{Grener2017,
@@ -16578,6 +16638,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@Article{Lazic2015,
+  author    = {Lazic, N. and Subramanya, A. and Ringgaard, M. and Pereira, F.},
+  title     = {Plato: A Selective Context Model for Entity Resolution},
+  journal   = {Transactions of the Association for Computational Linguistics},
+  year      = {2015},
+  volume    = {3},
+  pages     = {503-515},
+  doi       = {10.1162/tacl_a_00154},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @InProceedings{Le2012,
   author    = {Le, Q. V. and Ranzato, M. A. Monga, R. and Devin, M. and Chen, K. and Corrado, G. S. and Dean, J. and Ng, A.},
   title     = {Building high-level features using large scale unsupervised learning},
@@ -17082,6 +17154,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1017/CBO9780511483660},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@InProceedings{Lehnert1980,
+  author    = {Lehnert, W. G.},
+  title     = {Narrative Text Summarization},
+  booktitle = {1st AAAI National Conference on Artificial Intelligence},
+  year      = {1980},
+  pages     = {337-339},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+  url       = {https://www.aaai.org/Library/AAAI/1980/aaai80-095.php},
 }
 
 @Article{Lehnert1981,
@@ -20453,6 +20536,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.08.15},
 }
 
+@Article{Mohr2013,
+  author    = {Mohr, J. W. and Wagner-Pacifici, R. and Breiger, R. L. and Bogdanov, P.},
+  title     = {Graphing the grammar of motives in National Security Strategies: Cultural interpretation, automated text analysis and the drama of global politics},
+  journal   = {Poetics},
+  year      = {2013},
+  volume    = {41},
+  number    = {6},
+  pages     = {670-700},
+  doi       = {10.1016/j.poetic.2013.08.003},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @Article{Mollgaard2016,
   author    = {Mollgaard, A. and Zettler, I. and Dammeyer, J. and Jensen, M. H. and Lehmann, S. and Mathiesen, J.},
   title     = {Measure of Node Similarity in Multilayer Networks},
@@ -22697,6 +22793,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.13},
 }
 
+@Article{Palmer2005,
+  author    = {Palmer, M. and Gildea, D. and Kingsbury, P.},
+  title     = {The Proposition Bank: An Annotated Corpus of Semantic Roles},
+  journal   = {Computational Linguistics},
+  year      = {2005},
+  volume    = {31},
+  number    = {1},
+  pages     = {71-106},
+  doi       = {10.1162/0891201053630264},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @InProceedings{Pan2018,
   author    = {Pan, S. and Hu, R. and Long, G. and Jiang, J. and Yao, L. and Zhang, C.},
   title     = {Adversarially Regularized Graph Autoencoder for Graph Embedding},
@@ -24182,6 +24291,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@InProceedings{Ramakrishna2015,
+  author    = {Ramakrishna, A. and Malandrakis, N. and Staruk, E. and Narayanan, S.},
+  title     = {A quantitative analysis of gender differences in movies using psycholinguistic normatives},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2015},
+  pages     = {1996-2001},
+  doi       = {10.18653/v1/d15-1234},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @InProceedings{Ramakrishna2017,
   author    = {Ramakrishna, A. and Martínez, V. R. and Malandrakis, N. and Singla, K. and Narayanan, S.},
   title     = {Linguistic analysis of differences in portrayal of movie characters},
@@ -24547,6 +24667,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/09546553.2019.1671373},
   owner     = {Vincent},
   timestamp = {2020.07.20},
+}
+
+@InProceedings{Ren2015,
+  author    = {Ren, X. and El-Kishky, A. and Wang, C. and Tao, F. and Voss, C. R. and Han, J.},
+  title     = {ClusType: Effective Entity Recognition and Typing by Relation Phrase-Based Clustering},
+  booktitle = {21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year      = {2015},
+  pages     = {995-1004},
+  doi       = {10.1145/2783258.2783362},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
 }
 
 @InProceedings{Ren2018,
@@ -26013,6 +26144,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.23},
 }
 
+@InProceedings{Samory2018,
+  author    = {Samory, M. and Mitra, T.},
+  title     = {Conspiracies online: User discussions in a conspiracy community following dramatic events},
+  booktitle = {12th International AAAI Conference on Web and Social Media},
+  year      = {2018},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+  url       = {https://par.nsf.gov/biblio/10082962},
+}
+
 @Article{Samoylenko2006,
   author    = {Samoylenko, I. and Chao, T.-C. and Liu, W.-C. and Chen, C.-M.},
   title     = {Visualizing the scientific world and its evolution},
@@ -26335,6 +26476,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/isi.2009.5137307},
   owner     = {Vincent},
   timestamp = {2020.03.15},
+}
+
+@InProceedings{Schmitz2012,
+  author    = {Schmitz, M. and Bart, R. and Soderland, S. and Etzioni, O.},
+  title     = {Open language learning for information extraction},
+  booktitle = {Joint conference on empirical methods in natural language processing and computational natural language learning},
+  year      = {2012},
+  pages     = {523-534},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+  url       = {https://www.aclweb.org/anthology/D12-1048/},
 }
 
 @Electronic{Schneider2016,
@@ -28478,6 +28630,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://tango.bol.ucla.edu/publications/A99.pdf},
 }
 
+@Article{Tangherlini2016,
+  author    = {Tangherlini, T. R. and Roychowdhury, V. and Glenn, B. and Crespi, C. M. and Bandari, R. and Wadia, A. and Falahi, M. and Ebrahimzadeh, E. and Bastani, R.},
+  title     = {``Mommy Blogs'' and the Vaccination Exemption Narrative: Results From A Machine-Learning Approach for Story Aggregation on Parenting Social Media Sites},
+  journal   = {JMIR Public Health and Surveillance},
+  year      = {2016},
+  volume    = {2},
+  number    = {2},
+  pages     = {e166},
+  doi       = {10.2196/publichealth.6586},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @Article{Tanisik2016,
   author    = {Tanisik, G. and Zalluhoglu, C. and Ikizler-Cinbis, N.},
   title     = {Facial descriptors for human interaction recognition in still images},
@@ -28726,6 +28891,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1089/brain.2011.0038},
   owner     = {Vincent},
   timestamp = {2014.06.08},
+}
+
+@Article{Thelwall2016,
+  author    = {Thelwall, M. and Kousha, K.},
+  title     = {Goodreads: A social network site for book readers},
+  journal   = {Journal of the Association for Information Science and Technology},
+  year      = {2016},
+  volume    = {68},
+  number    = {4},
+  pages     = {972-983},
+  doi       = {10.1002/asi.23733},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
+@Article{Thelwall2019,
+  author    = {Thelwall, M. and Bourrier, K.},
+  title     = {The reading background of Goodreads book club members: a female fiction canon?},
+  journal   = {Journal of Documentation},
+  year      = {2019},
+  volume    = {75},
+  number    = {5},
+  pages     = {1139-1161},
+  doi       = {10.1108/jd-10-2018-0172},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
 }
 
 @InProceedings{TheofanisChourdakis2017,
@@ -30161,6 +30352,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@InProceedings{Wan2018,
+  author    = {Wan, M. and McAuley, J.},
+  title     = {Item recommendation on monotonic behavior chains},
+  booktitle = {12th ACM Conference on Recommender Systems},
+  year      = {2018},
+  pages     = {86-94},
+  doi       = {10.1145/3240323.3240369},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
+@InProceedings{Wan2019,
+  author    = {Wan, M. and Misra, R. and Nakashole, N. and McAuley, J.},
+  title     = {Fine-Grained Spoiler Detection from Large-Scale Review Corpora},
+  booktitle = {57th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2019},
+  pages     = {2605-2610},
+  doi       = {10.18653/v1/p19-1248},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @Article{Wang2003a,
   author    = {Wang, Z. and Thorngate, W.},
   title     = {Sentiment and social mitosis: Implications of Heider's Balance Theory},
@@ -31154,6 +31367,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1873951.1874110},
   owner     = {Vincent},
   timestamp = {2019.03.22},
+}
+
+@InProceedings{Wu2010a,
+  author    = {Wu, F. and Weld, D. S.},
+  title     = {Open information extraction using Wikipedia},
+  booktitle = {48th annual meeting of the association for computational linguistics},
+  year      = {2010},
+  pages     = {118-127},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+  url       = {https://www.aclweb.org/anthology/P10-1013/},
 }
 
 @Article{Wu2011,
